# napyclaw

./: Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  napyclaw.toml  pyproject.toml
docs/lessons/: startup.md
docs/superpowers/plans/: 2026-03-25-napyclaw-plan-1-foundation.md  2026-04-19-atomic-mode-architecture.md  2026-04-19-atomic-mode-handoff.md  2026-04-24-webchat-comms.md  (+2 more)
napyclaw/: __main__.py  agent.py  app.py  config.py  db.py  egress.py  injection_guard.py  memory.py  oauth.py  private_session.py  prompt_builder.py  scheduler.py  setup.py  shield.py  summarizer.py
napyclaw/channels/: base.py  slack.py  web.py
napyclaw/migrations/: 001_thoughts.sql  002_operational.sql  003_webchat.sql  004_specialist_memory.sql
napyclaw/models/: base.py  bedrock_client.py  ollama_client.py  openai_client.py
napyclaw/tools/: base.py  file_ops.py  identity.py  memory_tool.py  messaging.py  scheduling.py  specialist_tools.py  web_search.py
searxng/: settings.yml
services/comms/: Dockerfile  main.py  requirements.txt
services/comms-tailscale/: Dockerfile  entrypoint.sh  fetch_secret.py
services/egressguard/: main.py  requirements.txt
tests/: test_agent.py  test_app.py  test_config.py  test_db.py  test_egress.py  test_injection_guard.py  test_memory.py  test_models.py  test_private_session.py  test_prompt_builder.py  test_scheduler.py  test_shield.py  test_slack.py  test_specialist_tools.py  test_summarizer.py  test_tools.py  test_types.py  test_web_channel.py
tests/services/: test_comms.py  test_comms_static.py  test_egressguard.py
(+6 files in other folders)
