[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "napyclaw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "infisical-python>=2.1",
    "openai>=1.30",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "slack-bolt>=1.18",
    "apscheduler>=3.10",
    "asyncpg>=0.29",
    "detect-secrets>=1.4",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.34",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
